--- a/css/style.css
+++ b/css/style.css
@@ -14544,6 +14544,218 @@ html.bcbb-theme kbd {
   font-weight: 900 !important;
 }
 
+.last-child-no-border > *:last-child {
+  border: 0px transparent !important;
+}
+
+@media only screen and (min-width: 576px) {
+  .visually-hidden-sm-up {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-sm-up:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .visually-hidden-md-up {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-md-up:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .visually-hidden-lg-up {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-lg-up:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .visually-hidden-xl-up {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-xl-up:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .visually-hidden-sm-down {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-sm-down:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .visually-hidden-md-down {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-md-down:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .visually-hidden-lg-down {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-lg-down:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .visually-hidden-xl-down {
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  .visually-hidden-xl-down:not(caption) {
+    position: absolute !important;
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .disable-pointer-sm-up {
+    pointer-events: none !important;
+  }
+  .disable-pointer-sm-up:focus, .disable-pointer-sm-up:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .disable-pointer-md-up {
+    pointer-events: none !important;
+  }
+  .disable-pointer-md-up:focus, .disable-pointer-md-up:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .disable-pointer-lg-up {
+    pointer-events: none !important;
+  }
+  .disable-pointer-lg-up:focus, .disable-pointer-lg-up:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .disable-pointer-xl-up {
+    pointer-events: none !important;
+  }
+  .disable-pointer-xl-up:focus, .disable-pointer-xl-up:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .disable-pointer-sm-down {
+    pointer-events: none !important;
+  }
+  .disable-pointer-sm-down:focus, .disable-pointer-sm-down:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .disable-pointer-md-down {
+    pointer-events: none !important;
+  }
+  .disable-pointer-md-down:focus, .disable-pointer-md-down:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .disable-pointer-lg-down {
+    pointer-events: none !important;
+  }
+  .disable-pointer-lg-down:focus, .disable-pointer-lg-down:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .disable-pointer-xl-down {
+    pointer-events: none !important;
+  }
+  .disable-pointer-xl-down:focus, .disable-pointer-xl-down:focus-within {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+}
+
 h1.page-title::after, .page-title.h1::after {
   border-bottom: 0.18em solid #fcba19;
   content: "";
@@ -14553,7 +14765,7 @@ h1.page-title::after, .page-title.h1::after {
   margin-bottom: 2rem;
 }
 
-.icon-bi-bookmark-plus {
+.icon-bi-arrow-right-short {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14566,18 +14778,18 @@ h1.page-title::after, .page-title.h1::after {
   text-decoration: none;
   margin-left: 1.25em;
 }
-.icon-bi-bookmark-plus::before, .icon-bi-bookmark-plus::after {
+.icon-bi-arrow-right-short::before, .icon-bi-arrow-right-short::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-bookmark-plus::before {
+.icon-bi-arrow-right-short::before {
   margin-left: -1.25em;
-  content: "\f19d";
+  content: "\f135";
 }
 
-.icon-bi-bookmark-plus-after {
+.icon-bi-arrow-right-short-after {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14589,15 +14801,15 @@ h1.page-title::after, .page-title.h1::after {
           align-items: center;
   text-decoration: none;
 }
-.icon-bi-bookmark-plus-after::before, .icon-bi-bookmark-plus-after::after {
+.icon-bi-arrow-right-short-after::before, .icon-bi-arrow-right-short-after::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-bookmark-plus-after::after {
+.icon-bi-arrow-right-short-after::after {
   margin-right: -1.25em;
-  content: "\f19d";
+  content: "\f135";
 }
 
 .icon-bi-bookmark-dash-fill {
@@ -14647,7 +14859,7 @@ h1.page-title::after, .page-title.h1::after {
   content: "\f197";
 }
 
-.icon-bi-info-circle {
+.icon-bi-bookmark-plus {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14660,18 +14872,18 @@ h1.page-title::after, .page-title.h1::after {
   text-decoration: none;
   margin-left: 1.25em;
 }
-.icon-bi-info-circle::before, .icon-bi-info-circle::after {
+.icon-bi-bookmark-plus::before, .icon-bi-bookmark-plus::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-info-circle::before {
+.icon-bi-bookmark-plus::before {
   margin-left: -1.25em;
-  content: "\f431";
+  content: "\f19d";
 }
 
-.icon-bi-info-circle-after {
+.icon-bi-bookmark-plus-after {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14683,15 +14895,62 @@ h1.page-title::after, .page-title.h1::after {
           align-items: center;
   text-decoration: none;
 }
-.icon-bi-info-circle-after::before, .icon-bi-info-circle-after::after {
+.icon-bi-bookmark-plus-after::before, .icon-bi-bookmark-plus-after::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-info-circle-after::after {
+.icon-bi-bookmark-plus-after::after {
   margin-right: -1.25em;
-  content: "\f431";
+  content: "\f19d";
+}
+
+.icon-bi-bookmarks-fill {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  margin-left: 1.25em;
+}
+.icon-bi-bookmarks-fill::before, .icon-bi-bookmarks-fill::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-bookmarks-fill::before {
+  margin-left: -1.25em;
+  content: "\f1a3";
+}
+
+.icon-bi-bookmarks-fill-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-bi-bookmarks-fill-after::before, .icon-bi-bookmarks-fill-after::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-bookmarks-fill-after::after {
+  margin-right: -1.25em;
+  content: "\f1a3";
 }
 
 .icon-bi-funnel {
@@ -14788,7 +15047,7 @@ h1.page-title::after, .page-title.h1::after {
   content: "\f3e0";
 }
 
-.icon-bi-x-circle-fill {
+.icon-bi-info-circle {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14801,18 +15060,18 @@ h1.page-title::after, .page-title.h1::after {
   text-decoration: none;
   margin-left: 1.25em;
 }
-.icon-bi-x-circle-fill::before, .icon-bi-x-circle-fill::after {
+.icon-bi-info-circle::before, .icon-bi-info-circle::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-x-circle-fill::before {
+.icon-bi-info-circle::before {
   margin-left: -1.25em;
-  content: "\f622";
+  content: "\f431";
 }
 
-.icon-bi-x-circle-fill-after {
+.icon-bi-info-circle-after {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14824,15 +15083,15 @@ h1.page-title::after, .page-title.h1::after {
           align-items: center;
   text-decoration: none;
 }
-.icon-bi-x-circle-fill-after::before, .icon-bi-x-circle-fill-after::after {
+.icon-bi-info-circle-after::before, .icon-bi-info-circle-after::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-x-circle-fill-after::after {
+.icon-bi-info-circle-after::after {
   margin-right: -1.25em;
-  content: "\f622";
+  content: "\f431";
 }
 
 .icon-bi-search {
@@ -14882,7 +15141,7 @@ h1.page-title::after, .page-title.h1::after {
   content: "\f52a";
 }
 
-.icon-bi-arrow-right-short {
+.icon-bi-trash3 {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14895,18 +15154,18 @@ h1.page-title::after, .page-title.h1::after {
   text-decoration: none;
   margin-left: 1.25em;
 }
-.icon-bi-arrow-right-short::before, .icon-bi-arrow-right-short::after {
+.icon-bi-trash3::before, .icon-bi-trash3::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-arrow-right-short::before {
+.icon-bi-trash3::before {
   margin-left: -1.25em;
-  content: "\f135";
+  content: "\f78b";
 }
 
-.icon-bi-arrow-right-short-after {
+.icon-bi-trash3-after {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -14918,15 +15177,62 @@ h1.page-title::after, .page-title.h1::after {
           align-items: center;
   text-decoration: none;
 }
-.icon-bi-arrow-right-short-after::before, .icon-bi-arrow-right-short-after::after {
+.icon-bi-trash3-after::before, .icon-bi-trash3-after::after {
   font-family: "bootstrap-icons" !important;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-bi-arrow-right-short-after::after {
+.icon-bi-trash3-after::after {
   margin-right: -1.25em;
-  content: "\f135";
+  content: "\f78b";
+}
+
+.icon-bi-x-circle-fill {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  margin-left: 1.25em;
+}
+.icon-bi-x-circle-fill::before, .icon-bi-x-circle-fill::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-x-circle-fill::before {
+  margin-left: -1.25em;
+  content: "\f622";
+}
+
+.icon-bi-x-circle-fill-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: auto;
+  line-height: 1 !important;
+  gap: 0.25em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-bi-x-circle-fill-after::before, .icon-bi-x-circle-fill-after::after {
+  font-family: "bootstrap-icons" !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-bi-x-circle-fill-after::after {
+  margin-right: -1.25em;
+  content: "\f622";
 }
 
 .icon-bi {
@@ -15062,6 +15368,10 @@ h1.page-title::after, .page-title.h1::after {
   border-left-color: #236430;
 }
 
+.badge-facet {
+  min-width: 4em;
+}
+
 .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15102,22 +15412,6 @@ h1.page-title::after, .page-title.h1::after {
 }
 .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .button:last-child {
   margin-left: 0.125em;
-}
-
-.block-facets-summary ul {
-  list-style: none;
-}
-.block-facets-summary ul li {
-  display: inline-block;
-}
-.block-facets-summary ul a {
-  text-decoration: none;
-}
-.block-facets-summary ul a::after {
-  font-family: "Font Awesome 6 Free";
-  content: "\f057";
-  font-weight: 900;
-  width: 1em;
 }
 
 .block-bcbb-search {
@@ -15244,6 +15538,41 @@ ul.bb-subway .summary {
   margin-left: 1.5em;
   margin-top: -0.5em;
   padding-bottom: 1em;
+}
+
+.bb-collapse .toggle {
+  width: 100%;
+  text-align: left;
+  border-width: 0 0 1px 0;
+  background: var(--bs-gray-100);
+  border-color: var(--bs-gray-300);
+  border-radius: 0;
+  position: relative;
+  padding: 1em 1em 1em 3em;
+}
+.bb-collapse .toggle::before {
+  position: absolute;
+  margin-left: -1.5em;
+  display: inline-block;
+  font-family: "bootstrap-icons" !important;
+  content: "\f231";
+}
+.bb-collapse .toggle:hover, .bb-collapse .toggle:active, .bb-collapse .toggle:focus {
+  background: var(--bs-gray-200) !important;
+  border-color: var(--bs-gray-300) !important;
+}
+.bb-collapse .toggle[aria-expanded=true] {
+  background: var(--bs-gray-200) !important;
+  border-color: var(--bs-gray-300) !important;
+}
+.bb-collapse .toggle[aria-expanded=true]::before {
+  content: "\f229";
+}
+
+@media only screen and (min-width: 768px) {
+  .bb-collapse-responsive .collapse:not(.show) {
+    display: block !important;
+  }
 }
 
 .book-navigation {
